--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -11699,3 +11699,8 @@ body {
   font-size: 0.75rem;
   border-radius: 0.25rem !important;
 }
+
+.card { 
+  margin: 1rem;
+  border-radius: 0.75rem;
+}
