--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -11703,4 +11703,14 @@ body {
 .card { 
   margin: 1rem;
   border-radius: 0.75rem;
+  font-size: 1.25em;
+}
+
+.dolar{
+  background-color: rgba(13, 110, 253, 0.2);
+}
+
+.dolar:hover{
+  text-decoration: underline;
+  text-decoration-color: #323539;
 }
