Arreglo de Stylesheet y de posición del logo en página del homebanking

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,4 +1,90 @@
 @charset "UTF-8";
+/* Por el amor de mi Salud Mental:
+
+> Documenten el CSS en cuanto mas puedan para saber que Tags se usan en que pagina
+> Usen clases para componentes reutilizables (Login Form, Headers, Footers)
+> Usen IDs para CSS que solo se aplica a un elemento
+> Si algo queda confuso en el codigo, expliquen lo que hace
+> Expliquen como funcionan sus animaciones, para asi poder mejorarlas/editarlas
+
+> Atte: Lauti
+
+*/
+
+/* Universales */
+
+*{
+  font-size: 16px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+/* Login Page & Sign In Page */
+
+#background{
+  background-image: url('/images/bonaerense/BuenosAires.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+#loginForm{
+  width: fit-content;
+  margin-bottom: 10rem;
+}
+
+/* Home Page */
+
+#homeBackground {
+  background-image: url('/images/bonaerense/Obelisk.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+#homeHero {
+  max-width: 56rem;
+  margin-bottom: -5rem;
+  margin-top: 12rem;
+  border-top-left-radius: 50px;
+  border-top-right-radius: 50px;
+}
+
+.bg-image-vertical {
+  position: relative;
+  overflow: hidden;
+  background-repeat: no-repeat;
+  background-position: right center;
+  background-size: auto 100%;
+  }
+  
+  #Logobarra {
+    max-width: 35%;
+    width: 100px; 
+    object-position:top;
+  }
+
+
+
+
+@media (min-width: 1025px) {
+  .h-custom-2 {
+  height: 100%;
+  }
+}
+
+/*- signup page-*/
+#link{
+  text-decoration: none;
+  color: white;
+}
+#azulito{
+  background-color: #1d71b8;
+  
+}
+#azul{
+  background-color: #312783;
+}
+
+/*----------------------------------------*/
+
 /*!
 * Start Bootstrap - SB Admin v7.0.5 (https://startbootstrap.com/template/sb-admin)
 * Copyright 2013-2022 Start Bootstrap
@@ -10,6 +96,7 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
