--- a/CSS/stylepers.css
+++ b/CSS/stylepers.css
@@ -20,7 +20,7 @@
   /* Login Page & Sign In Page */
   
   #background{
-    background-image: url('/images/bonaerense/BuenosAires.jpg');
+    background-image: url('../images/bonaerense/BuenosAires.jpg');
     background-size: cover;
     background-repeat: no-repeat;
   }
@@ -33,7 +33,7 @@
   /* Home Page */
   
   #homeBackground {
-    background-image: url('/images/bonaerense/Obelisk.jpg');
+    background-image: url('../images/bonaerense/Obelisk.jpg');
     background-size: cover;
     background-repeat: no-repeat;
   }
