--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -21,7 +21,7 @@
 /* Login Page & Sign In Page */
 
 #background{
-  background-image: url('../images/bonaerense/BuenosAires.jpg');
+  background-image: url('./images/bonaerense/BuenosAires.jpg');
   background-size: cover;
   background-repeat: no-repeat;
 }
