--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -11787,17 +11787,6 @@ body {
   border-radius: 0.25rem !important;
 }
 
-.card { 
-  margin: 1rem;
-  border-radius: 0.75rem;
-  font-size: 1.25em;
-}
-
-.dolar{
-  background-color: rgba(13, 110, 253, 0.2);
-}
-
-.dolar:hover{
+.tituloPrecios:hover{
   text-decoration: underline;
-  text-decoration-color: #323539;
 }
